force-app/main/default/objects/ESS_Letter_of_Recommendation__c.object
<CustomObject>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <label>Current Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>GeneratedToPDF</fullName>
                    <label>Generated to PDF</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Joined_Company__c</fullName>
        <label>Date Joined Company</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Full_EN__c</fullName>
        <label>Department Full EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Full_TH__c</fullName>
        <label>Department Full TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_No__c</fullName>
        <label>Document No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name_TH__c</fullName>
        <label>Employee Name TH</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generate_PDF_Date__c</fullName>
        <label>Generate PDF Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Thai</fullName>
                    <label>ภาษาไทย</label>
                </value>
                <value>
                    <fullName>English</fullName>
                    <label>ภาษาอังกฤษ</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leave_End__c</fullName>
        <label>วันที่สิ้นสุดการลา</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leave_Start__c</fullName>
        <label>วันที่เริ่มต้นการลา</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Letter_Type__c</fullName>
        <label>Letter Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SalaryLetterForFinancial</fullName>
                    <label>จดหมายรับรองเงินเดือน (สำหรับทำธุรกรรมทางการเงิน)</label>
                </value>
                <value>
                    <fullName>SalaryLetterWithLeaveForVisa</fullName>
                    <label>จดหมายรับรองเงินเดือน แบบระบุวันลา (สำหรับยื่นขอ Visa)</label>
                </value>
                <value>
                    <fullName>SalaryLetterWithoutLeaveForVisa</fullName>
                    <label>จดหมายรับรองเงินเดือน แบบไม่ระบุวันลา (สำหรับยื่นขอ Visa)</label>
                </value>
                <value>
                    <fullName>WorkLetterWithoutSalary</fullName>
                    <label>จดหมายรับรองการทำงาน ไม่ระบุเงินเดือน</label>
                </value>
                <value>
                    <fullName>GrantedLetter</fullName>
                    <label>จดหมายผ่านสิทธิ์ (สำหรับทำธุรกรรมกับธนาคาร ธอส.)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Organization__c</fullName>
        <label>ระบุชื่อหน่วยงาน</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_TH__c</fullName>
        <label>Position TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Organization_EN__c</fullName>
        <label>To Organization EN</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Letter_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bangkok Bank Public Company Limited</fullName>
                </value>
                <value>
                    <fullName>Krungthai Bank Public Company Limited</fullName>
                </value>
                <value>
                    <fullName>Bank of Ayudhya Public Company Limited</fullName>
                </value>
                <value>
                    <fullName>Kasikornbank</fullName>
                </value>
                <value>
                    <fullName>Kiatnakin Phatra Bank</fullName>
                </value>
                <value>
                    <fullName>CIMB Thai Bank Public Company Limited</fullName>
                </value>
                <value>
                    <fullName>TMB Thanachart Bank</fullName>
                </value>
                <value>
                    <fullName>TISCO Bank</fullName>
                </value>
                <value>
                    <fullName>Siam Commercial Bank</fullName>
                </value>
                <value>
                    <fullName>United Overseas Bank Limited (UOB)</fullName>
                </value>
                <value>
                    <fullName>Land and Houses Public Company Limited</fullName>
                </value>
                <value>
                    <fullName>Standard Chartered Bank (Thai) PCL</fullName>
                </value>
                <value>
                    <fullName>Industrial and Commercial Bank of China (Asia) Limited</fullName>
                </value>
                <value>
                    <fullName>Thai Credit Retail Bank Public Company</fullName>
                </value>
                <value>
                    <fullName>Sumitomo Mitsui Trust Bank (Thai) PCL</fullName>
                </value>
                <value>
                    <fullName>MEGA International Commercial Bank Public Company Limited</fullName>
                </value>
                <value>
                    <fullName>Bank of China (Thai) Public Company Limited</fullName>
                </value>
                <value>
                    <fullName>JPMorgan Chase</fullName>
                </value>
                <value>
                    <fullName>Citibank</fullName>
                </value>
                <value>
                    <fullName>Sumitomo Mitsui Banking Corporation</fullName>
                </value>
                <value>
                    <fullName>BNP Paribas</fullName>
                </value>
                <value>
                    <fullName>Mizuho Bank</fullName>
                </value>
                <value>
                    <fullName>RHB</fullName>
                </value>
                <value>
                    <fullName>Indian Overseas Bank</fullName>
                </value>
                <value>
                    <fullName>OCBC Bank</fullName>
                </value>
                <value>
                    <fullName>HSBC Thailand</fullName>
                </value>
                <value>
                    <fullName>Government Savings Bank</fullName>
                </value>
                <value>
                    <fullName>Bank for Agriculture and Agricultural Co-operatives</fullName>
                </value>
                <value>
                    <fullName>Government Housing Bank</fullName>
                </value>
                <value>
                    <fullName>The British Embassy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_Organization__c</fullName>
        <label>หน่วยงาน</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Letter_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ธนาคารไทยพาณิชย์ จำกัด (มหาชน)</fullName>
                </value>
                <value>
                    <fullName>ธนาคารทหารไทยธนชาต จำกัด (มหาชน)</fullName>
                </value>
                <value>
                    <fullName>ธนาคารทิสโก้ จำกัด (มหาชน)</fullName>
                </value>
                <value>
                    <fullName>ธนาคารธนชาต จำกัด (มหาชน)</fullName>
                </value>
                <value>
                    <fullName>ธนาคารยูโอบี จำกัด (มหาชน)</fullName>
                </value>
                <value>
                    <fullName>ธนาคารแลนด์ แอนด์ เฮ้าส์ จำกัด (มหาชน)</fullName>
                </value>
                <value>
                    <fullName>ธนาคารสแตนดาร์ดชาร์เตอร์ด (ไทย) จำกัด (มหาชน)</fullName>
                </value>
                <value>
                    <fullName>ธนาคารไอซีบีซี (ไทย) จำกัด (มหาชน)</fullName>
                </value>
                <value>
                    <fullName>ธนาคารไทยเครดิต เพื่อรายย่อย จำกัด (มหาชน)</fullName>
                </value>
                <value>
                    <fullName>ธนาคารซูมิโตโม มิตซุย ทรัสต์ (ไทย) จำกัด (มหาชน)</fullName>
                </value>
                <value>
                    <fullName>ธนาคารเมกะ สากลพาณิชย์ จำกัด (มหาชน)</fullName>
                </value>
                <value>
                    <fullName>ธนาคารแห่งประเทศจีน (ไทย) จำกัด (มหาชน)</fullName>
                </value>
                <value>
                    <fullName>ธนาคารเอเอ็นแซด (ไทย) จำกัด (มหาชน)</fullName>
                </value>
                <value>
                    <fullName>ธนาคารเจพีมอร์แกน เชส</fullName>
                </value>
                <value>
                    <fullName>ธนาคารซิตี้แบงก์ เอ็น.เอ.</fullName>
                </value>
                <value>
                    <fullName>ธนาคารซูมิโตโม มิตซุย แบงกิ้ง คอร์ปอเรชั่น</fullName>
                </value>
                <value>
                    <fullName>ธนาคารดอยซ์แบงก์ เอจี</fullName>
                </value>
                <value>
                    <fullName>ธนาคารบีเอ็นพี พารีบาส์</fullName>
                </value>
                <value>
                    <fullName>ธนาคารมิซูโฮ จำกัด สาขากรุงเทพฯ</fullName>
                </value>
                <value>
                    <fullName>ธนาคารแห่งอเมริกาเนชั่นแนลแอสโซซิเอชั่น</fullName>
                </value>
                <value>
                    <fullName>ธนาคารอาร์ เอช บี จำกัด</fullName>
                </value>
                <value>
                    <fullName>ธนาคารอินเดียนโอเวอร์ซีส์</fullName>
                </value>
                <value>
                    <fullName>ธนาคารโอเวอร์ซี-ไชนีสแบงกิ้งคอร์ปอเรชั่น จำกัด</fullName>
                </value>
                <value>
                    <fullName>ธนาคารฮ่องกงและเซี่ยงไฮ้แบงกิ้งคอร์ปอเรชั่น จำกัด</fullName>
                </value>
                <value>
                    <fullName>ธนาคารออมสิน</fullName>
                </value>
                <value>
                    <fullName>ธนาคารอาคารสงเคราะห์</fullName>
                </value>
                <value>
                    <fullName>ธนาคารเพื่อการเกษตรและสหกรณ์</fullName>
                </value>
                <value>
                    <fullName>The British Embassy</fullName>
                </value>
                <value>
                    <fullName>Embassy of Australia</fullName>
                </value>
                <value>
                    <fullName>Embassy of Austria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>letter_purpose__c</fullName>
        <label>วัตถุประสงค์ของการขอจดหมายรับรอง</label>
        <type>TextArea</type>
    </fields>
    <label>ESS Letter of Recommendation</label>
    <nameField>
        <displayFormat>LOR-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>